# robo_generalize

./: .gitignore  .gitmodules  README.md  README_20260304.md  action_space_analysis_molmospaces.py  action_space_reduc.py  pyproject.toml  socket_test_optimized_AR.py  test.py  test_client_AR.py
docs/: DATASET_TO_GEAR_AND_TRAIN.md
examples/: inference.ipynb
examples/libero/: extract_human_demo_trajectories.py  main.py  visualize_trajectories.py
experiments/libero/: main_client.py
experiments/molmospaces/: download_assets_slurm.sh  eval_config.py  run_eval.sh  run_eval_slurm.sh  setup.sh
groot/vla/configs/data/dreamzero/: base_48_wan_fine_aug_relative.yaml  libero_sim_relative.yaml
groot/vla/configs/model/dreamzero/action_head/: wan_flow_matching_action_tf.yaml
groot/vla/configs/model/dreamzero/transform/: base.yaml
groot/vla/data/transform/: base.py  concat.py
groot/vla/model/dreamzero/: base_vla.py
groot/vla/model/dreamzero/action_head/: wan_flow_matching_action_tf.py
groot/vla/model/dreamzero/modules/: wan2_1_attention.py
groot/vla/model/dreamzero/transform/: dreamzero_cotrain.py
groot/vla/model/n1_5/: sim_policy.py
scripts/: pi05_inference.py  pi05_inference_subtask_inference.py  run_language_recovery_training.sh  sbatch_inference_test.sh  sbatch_language_recovery.sh
scripts/data/: convert_lerobot_to_gear.py
scripts/train/: libero_plus_training_lora.sh
src/openpi/: transforms.py
src/openpi/models/: gemma_05.py  model.py  pi05.py  pi05_config.py  tokenizer.py
src/openpi/training/: config.py  data_loader.py  language_recovery_dataset.py
